# Andromeda-quiz

./: CMakeLists.txt  README.md
include/andromeda_proximity_filter/: proximity_filter_lib.hpp  proximity_filter_node.hpp
install/: local_setup.sh  setup.sh
install/andromeda_proximity_filter/lib/andromeda_proximity_filter/: proximity_filter_node  test_pointcloud_pub.py
install/andromeda_proximity_filter/share/ament_index/resource_index/parent_prefix_path/: andromeda_proximity_filter
install/andromeda_proximity_filter/share/andromeda_proximity_filter/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: proximity_filter_launch.py
scripts/: test_pointcloud_pub.py
src/: proximity_filter_lib.cpp  proximity_filter_node.cpp
src/andromeda_proximity_filter/: CMakeLists.txt
src/andromeda_proximity_filter/include/andromeda_proximity_filter/: proximity_filter_lib.hpp  proximity_filter_node.hpp
src/andromeda_proximity_filter/launch/: proximity_filter_launch.py
src/andromeda_proximity_filter/scripts/: test_pointcloud_pub.py
src/andromeda_proximity_filter/src/: main.cpp  proximity_filter_lib.cpp  proximity_filter_node.cpp
src/andromeda_proximity_filter/test/: test_filter_lib.cpp
